# agora

./: package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: LoginScreen.tsx  ProfileModal.tsx  ServerModals.tsx
src/components/ui/: VoiceVisualizer.tsx  WalletConnectButton.tsx
src/features/wallet/: WalletContextProvider.tsx
src/hooks/: useAudioProcessor.ts  useSoundFx.ts
src/lib/: supabaseClient.ts
